src/styles/desktop.scss
@use "sass:meta";

html.desktop-view {
  @keyframes pulse {
    0% {
      transform: scale(1);
    }
    50% {
      transform: scale(0.9);
    }
    100% {
      transform: scale(1);
    }
  }

  #saypi-talkButton {
    /* not needed on desktop with call button */
    display: none;
  }

  #saypi-callButton {
    width: 2.25rem;
    position: relative;
    margin-right: 0;
  }

  .saypi-prompt-container {
    /* make room in the prompt text area for the call button */
    padding-right: 0;
  }

  .saypi-exit-button {
    display: none;
  }

  @keyframes fadeIn {
    from { opacity: 0; }
    to { opacity: 1; }
  }  

  @keyframes fadeOut {
    from { opacity: 1; }
    to { opacity: 0; }
  }

  .saypi-audio-controls {
    margin-top: 0.35rem; /* additional margin to align with control panel row on pi.ai */
  }

  #saypi-sidebar .saypi-control-button,
  #saypi-side-panel .saypi-control-button {
    cursor: pointer;
    svg {
      width: 30px;
      .cls-1 {
        stroke: #24381b;
      }
    }
  }

  .tooltip[aria-label]::after {
    content: attr(aria-label);
    position: absolute;
    top: 120%; // position the tooltip below the button
    transform: translateX(-70%); // center the tooltip relative to the button
    white-space: nowrap;
    background: #24381b; // Pi primary text color (dark green)
    color: white;
    padding: 5px 10px;
    border-radius: 4px;
    margin-left: 10px;
    opacity: 0;
    transition: opacity 0.3s;
    pointer-events: none;
    font-size: 1.2rem;
  }

  @include meta.load-css("./chatgpt.scss");
  
  // Show on hover (desktop)
  @media (hover: hover) {
    .tooltip[aria-label]:hover::after {
        opacity: 1;
        z-index: 101;
    }
  }

  @media only screen and (max-width:1200px){ // media query 
    @-moz-document url-prefix() { // target FF
         
      #saypi-callButton {
        width: 2.5rem;
        position: relative;
        margin-right: 0.25rem;
      }

      #saypi-submitButton {
        width: 2.5rem;
        height: 2.5rem;
      }

    }
}

  @include meta.load-css("./messages.scss");
}

